--- a/styles/cafe.css
+++ b/styles/cafe.css
@@ -1,6 +1,7 @@
 :root {
     --black-color: #171A1FFF;
     --grey-color: #F3F4F6FF;
+    --black-btn-color: #202127FF;
 }
 
 * {
@@ -26,6 +27,23 @@
     color: black!important;;
     width: auto !important;
     display: inline-block !important;
+}
+
+.sec-btn {
+    background-color: var(--black-btn-color);
+    font-family: "Source Sans 3", sans-serif;
+    color: white;
+    font-size: 1rem;
+    font-weight: 500;
+    padding: 0.375rem 1rem;
+    border-radius: 2px;
+}
+
+.sec-btn:hover, 
+.sec-btn:active, 
+.sec-btn:focus {
+    background-color: #F7F7F8FF!important;;
+    color: #4C4F5DFF!important;;
 }
 
 .navbar-toggler i {
@@ -55,6 +73,10 @@
 
 .navbar-nav .nav-item a:hover {
     opacity: 0.8;
+}
+
+nav .profile-img {
+    max-width: 2.5rem;
 }
 
 .sub-title {
