--- a/styles/index.css
+++ b/styles/index.css
@@ -1,32 +1,54 @@
-.user-icon {
-  width: 30px !important;
-  height: 30px !important;
-  background-color: gray;
+.landing {
+    background-image: url("../images/hero-bg.jpg");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    overflow: hidden;
 }
-.hero-section {
-  height: 900px;
-  background-image: url("../images/hero-bg.jpg"); 
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  /* border-radius: 1.5rem; */
+
+.landing {
+    min-height: calc(100vh - 56px);
 }
-.overlay {
-  background-color: rgba(0, 0, 0, 0.45);
-  padding: 4rem;
-  /* border-radius: 1.5rem; */
+
+.landing .filter {
+    height: 100%;
+    width: 100%;
+    background-color: #2f30306b;
+    top: 0;
+    left: 0;
 }
-.overlay p{
-  line-height: 1 !important;
+
+.landing h1 {
+    font-family: "Source Sans 3", sans-serif;
+    font-size: 50px; 
+    line-height: 60px; 
+    font-weight: 800; 
+    max-width: 350px;
+    color: #F3F4F6FF;
+    text-shadow: var(--primary-color) 1px 1px;
 }
-.hero-content{
-  width: 35%;
+
+.landing p {
+    color: #F3F4F6FF;
+    max-width: 500px;
 }
-.hero-text p {
-  margin: 0;
+
+.landing .btn {
+    font-size:medium;
+    transition: all 0.3s ease-in-out;
 }
-.icons svg{
-  width: 50px;
-  height: 50px;
-  stroke-width: 2.25;
+
+.card {
+    border-radius: 4px;
+    border-color: #DEE1E6FF;
+    /* min-height: 350px; */
+}
+
+.card i {
+    font-size: 3.5rem;
+}
+
+.card a {
+    text-decoration: none;
+    color: var(--black-color);
 }
