--- a/styles/about.css
+++ b/styles/about.css
@@ -1,15 +1,22 @@
+.about-info .card {
+    min-height: 333px;
+}
+
 form label{
-  color: gray;
+    color: gray;
 }
+
 form input {
-  border: gray solid 1px;
-  border-radius: 5px;
+    border: gray solid 1px;
+    border-radius: 5px;
 }
+
 form textarea{
-  border: gray solid 1px;
-  border-radius: 5px;
-  height: 100px;
+    border: gray solid 1px;
+    border-radius: 5px;
+    height: 100px;
 }
+
 .ceo-message{
-  background-color: rgb(219, 219, 219);
+    background-color: rgb(219, 219, 219);
 }
