style(file-struct): restyle file structure

--- a/styles/booking.css
+++ b/styles/booking.css
@@ -2,6 +2,12 @@
     border-radius: 4px;
     border-color: #DEE1E6FF;
     min-height: 350px;
+    transition: all 0.2s ease-in-out;
+}
+
+.card:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1)!important;
 }
 
 .main-btn {
