--- a/styles/cafe.css
+++ b/styles/cafe.css
@@ -4,6 +4,12 @@
 
 .card {
     border: solid 1px var(--grey-color);
+    transition: all 0.2s ease-in-out;
+}
+
+.card:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1)!important;
 }
 
 .box img {
