--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -1,3 +1,11 @@
+.hero-section {
+    background: #f2f2f2;
+}
+
+a {
+    color: var(--black-color);
+}
+
 .about-info .card {
     min-height: 333px;
 }
