--- a/src/styles.css
+++ b/src/styles.css
@@ -73,6 +73,70 @@ nav .profile-img {
     max-width: 2.5rem;
 }
 
+/*Home*/
+.landing {
+    background-image: url("./assets/images/home/hero-bg.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    overflow: hidden;
+}
+
+.landing {
+    min-height: calc(100vh - 56px);
+}
+
+.landing .filter {
+    height: 100%;
+    width: 100%;
+    background-color: #2f30306b;
+    top: 0;
+    left: 0;
+}
+
+.landing h1 {
+    font-family: "Source Sans 3", sans-serif;
+    font-size: 50px;
+    line-height: 60px;
+    font-weight: 800;
+    max-width: 350px;
+    color: #F3F4F6FF;
+    text-shadow: var(--primary-color) 1px 1px;
+}
+
+.landing p {
+    color: #F3F4F6FF;
+    max-width: 500px;
+}
+
+.landing .btn {
+    font-size: medium;
+    transition: all 0.3s ease-in-out;
+}
+
+.home-card {
+    border-radius: 4px;
+    border-color: #DEE1E6FF;
+    transition: all 0.3s ease-in-out;
+}
+
+.home-card:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1) !important;
+}
+
+.home-card i {
+    font-size: 3.5rem;
+}
+
+.home-card a {
+    color: var(--black-color) !important;
+    transition: all 0.3s ease;
+}
+
+.home-card a:hover {
+    opacity: 0.6;
+}
+
 /* footer */
 footer a {
     color: var(--black-color);
