--- a/src/styles.css
+++ b/src/styles.css
@@ -233,3 +233,13 @@ footer a:hover {
 .about-page .ceo-message {
     background-color: rgb(219, 219, 219);
 }
+@media screen and (max-width : 991px) {
+    .chart-style{
+        width: 100% !important;
+    }
+} 
+@media screen and (min-width : 992px) {
+    .chart-style{
+        width: 50% !important;
+    }
+} 
